deployment/dp-back.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: env-intern
  labels:
    app: devsecops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devsecops
      type: api
  template:
    metadata:
      labels:
        app: devsecops
        type: api
    spec:
      containers:
        - name: backend
          image: europe-west1-docker.pkg.dev/z-devsecops-cloud/z-devsecops-registry/backend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
