deployment/dp-front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deploy-front
  namespace: env-intern
  labels:
    app: devsecops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devsecops
      type: front
  template:
    metadata:
      labels:
        app: devsecops
        type: front
    spec:
      containers:
        - name: frontend
          image: europe-west1-docker.pkg.dev/z-devsecops-cloud/z-devsecops-registry/frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: main
      #imagePullSecrets:
      #  - name: ghcr
