deployment/api.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: env-intern
spec:
  selector:
    type: api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
