deployment/frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: env-intern
spec:
  selector:
    type: front
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
