deployment/my-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: env-intern
spec:
  selector:
    app: devsecops
  ports:
    - name: main
      port: 3000
      targetPort: 8080
    - name: api
      port: 8080
      targetPort: 8080
