deployment/ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-healtcheck
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/healthcheck`)
      services:
        - kind: TraefikService
          name: ping@internal
