deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: frontend
  name: frontend
  namespace: env-intern
spec:
  rules:
    - host: front.34.111.30.200.nip.io
      http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
          - backend:
              service:
                name: api
                port:
                  number: 8080
            path: /profile
            pathType: Prefix
