deployment/my-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: env-intern
spec:
  defaultBackend:
    service:
      name: api
      port:
        number: 8080
